--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <script src="js/myjs.js"></script>
     <script>
 
+        //jQuery inside html script tag
+        
         function myfun(){
             console.log('First Code')
         }
